cm4all-workshop (0.1.4) unstable; urgency=low

  * moved VERSION to version.h

 --

cm4all-workshop (0.1.3) unstable; urgency=low

  * added plan variable NODE
  * documented the plan variables
  * disallow user "root" for plans
  * check stdin_null() return value
  * don't close(0) in daemonize()
  * fixed double queue run on startup

 -- Max Kellermann <mk@cm4all.com>  Thu,  9 Nov 2006 12:05:39 +0100

cm4all-workshop (0.1.2) unstable; urgency=low

  * using libevent

 -- Max Kellermann <mk@cm4all.com>  Thu, 19 Oct 2006 11:00:15 +0200

cm4all-workshop (0.1.1) unstable; urgency=low

  * added -doc package
  * build-depend on xsltproc and docbook-xsl
  * install .sql file
  * doc: added installation instructions

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Oct 2006 14:55:43 +0200

cm4all-workshop (0.1.0) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Oct 2006 12:07:01 +0200