@@ -410,7 +410,7 @@ int workplace_start(struct workplace *workplace,
         /* UID / GID */
 
         if (geteuid() == 0) {
-            ret = setgroups(0, &plan->gid);
+            ret = setgroups(plan->num_groups, plan->groups);
             if (ret < 0) {
                 fprintf(stderr, "setgroups() failed: %s\n", strerror(errno));
                 exit(1);
