@@ -1,5 +1,6 @@
 cm4all-workshop (0.1.4) unstable; urgency=low
 
+  * set supplementary groups
   * moved VERSION to version.h
 
  --
